2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/median.m: Add NaN test case from bug #29930.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* general/isequalwithequalnans.m: Add test case from bug #31239.

2010-12-13  Ben Abbott  <bpabbott@mac.com>

	* plot/__print_parse_opts__.m: Fix indexing bug for varargin.
	Bug #31862.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* statistics/distributions/betapdf.m: Add test for large values of
	alpha and beta.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* strings/strmatch.m: Add test with null search pattern.

2010-12-13 Doug Stewart  <doug.dastew@gmail.com>

	* plot/hist.m: Improved the help section.

2010-12-13  Kai Habel  <kai.habel@gmx.de>

	* plot/private/__add_default_menu__.m: New function.
	* plot/figure.m: Call __add_default_menu__ function.
	* plot/module.mk: Add new file to list.

2010-12-13  Rik  <octave@nomad.inbox5.com>

	* optimization/sqp.m: Change docstring to refer to x0 as the initial
	seed vector.

2010-12-13  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Remove never violated Inf bounds from
	computation in function for inequality constraints (bug
	#31742).  Remove non-functional check for inequality constraints
	being +Inf in each iteration.

2010-12-12  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/optimget.m: Use explicit toupper conversion rather than
	lookup(..., "i").
	* optimization/optimset.m: Ditto.
	* miscellaneous/parseparams.m: Ditto.

2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Fix bugs with respect to number if inputs and argument
	handling.

2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Make view more compatible. Allow cartesian
	coordinates and axes handle arguments.

2010-12-10  Ben Abbott  <bpabbott@mac.com>

	* io/strread.m: Don't require space between format specifiers.

2010-12-10  Rik  <octave@nomad.inbox5.com>

	* testfun/speed.m: Eliminate line continuation in function definition.

2010-12-10  Kai Habel  <kai.habel@gmx.de>