@@ -110,6 +110,10 @@ function retval = compass (varargin)
 
 endfunction
 
+
 %!demo
-%! a = toeplitz([1;randn(9,1)],[1,randn(1,9)]);
-%! compass (eig (a))
+%! randn_9x1_data = [-2.555884; 0.394974; -0.191871; -1.147024; 1.355425; -0.437335; -0.014370; -0.941312; 1.240300];
+%! randn_1x9_data = [1.42934, -1.10821, -1.70404, 0.63357, -0.68337, -1.19771, -0.96502, -1.12810, 0.22457];
+%! a = toeplitz ([1;randn_9x1_data], [1,randn_1x9_data]);
+%! compass (eig (a));
+
