@@ -105,5 +105,7 @@ function [thout, rout] = rose (varargin)
 
 endfunction
 
+
 %!demo
-%! rose ([2*randn(1e5,1), pi + 2 * randn(1e5,1)])
+%! rose ([2*randn(1e5, 1), pi + 2*randn(1e5, 1)]);
+
